--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
-  background-image: url("images\notebook background.jpg");
-  background-size: cover
+  background-image: url("img/notebook_background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat; 
+  background-position: center;
 }
 
 
