--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   background-image: url("img/notebook_background.jpg");
   background-size: cover;
   background-repeat: no-repeat; 
-  background-position: center;
+  background-position: center top;
 
 }
 
