--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@ body{
   background-repeat: no-repeat; 
   background-position: center ;
   min-height: 100vh; 
+  font-family: 'Courgette', cursive;
+  font-weight: 617;
 }
 
 header {
   font-size: 1.5rem; 
+  font-family: 'Courgette', cursive;
+
 }
 
 header, 
@@ -41,11 +45,12 @@ form button{
 
 form button:hover{ 
   background: #fff; 
-  color: #000;
+  color: chocolate;
 }
 #incomplete {
   list-style: none;
   min-width: 30%;
+  background: #ffffff6e;
 }
 
 .toDo {
@@ -62,6 +67,14 @@ form button:hover{
   display: flex; 
   justify-content: center;
   align-items: center; 
+  flex-direction: column;
+  
+}
+
+.done-container h2, 
+.todo-container h2 {
+  font-size: 2rem;
+
 }
 
 .toDo li {
@@ -76,7 +89,19 @@ form button:hover{
   padding: 0.8rem; 
   cursor: pointer; 
 }
-
 .delete-button {
   background: chocolate;
+}
+
+.toDoItem {
+  padding: 0rem 0.5rem; 
+}
+
+.fa-trash, .fa-check {
+  pointer-events: none;
+}
+
+input[placeholder] {
+  font-family: 'Courgette', cursive;
+
 }
