--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 body{
   background-image: url("img/notebook_background.jpg");
   background-size: cover;
@@ -18,6 +17,9 @@ body{
 header {
   font-size: 1.5rem; 
   font-family: 'Courgette', cursive;
+
+}
+#search {
 
 }
 
@@ -74,7 +76,6 @@ form button:hover{
 .done-container h2, 
 .todo-container h2 {
   font-size: 2rem;
-
 }
 
 .toDo li {
