--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
 }
 
 
-
 body {
   background-image: url("img/notebook_background.jpg");
   background-size: cover;
   background-repeat: no-repeat; 
-  background-position: center ;
+  background-position: center top;
   min-height: 100vh; 
   font-family: 'Courgette', cursive;
   font-weight: 617;
@@ -36,7 +35,7 @@ body {
 
 .searchButton {
   width: 40px;
-  height: 46px; 
+  height: 20px; 
 }
 
 .searchButton:hover {
@@ -46,7 +45,7 @@ body {
 
 #date {
   position: absolute;
-  left: 20px;
+  left: 30px;
   top: 30px;
   font-size: 1.8rem; 
 
